--- a/static/cv/gabe_sekeres_cv.tex
+++ b/static/cv/gabe_sekeres_cv.tex
@@ -62,13 +62,13 @@
 
     \item Parameswaran, G., \textbf{Sekeres, G.}, and Goldblatt, H. ``The Politics of the Slippery Slope.'' Forthcoming at the \emph{Journal of Politics}.
 \end{rSection}
-\begin{rSection}{Awards}
-\textbf{2022} {Michael M. Weinstein Prize in Economics}\hfill {Haverford, PA} \\ 
-{Awarded to the senior economics major who has contributed the most to the major as a whole, including mentoring, while maintaining exceptional academic performance.}
+\begin{rSection}{Fellowships and Awards}
+\item \textbf{2022} {Michael M. Weinstein Prize in Economics}\hfill {Haverford, PA}
+\item \textbf{2024} {Sage Graduate Fellowship}\hfill {Ithaca, NY}
 \end{rSection}
 \begin{rSection}{Technical Strengths}
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-  Programming & Julia, Python, R, Stata, Java \\
+  Programming & Julia, Python, R, Stata, Matlab \\
     Software &  \LaTeX\\
    Languages & English - Native
 \end{tabular}
