--- a/static/cv/gabe_sekeres_cv.tex
+++ b/static/cv/gabe_sekeres_cv.tex
@@ -57,7 +57,7 @@
  \end{rSection}
 \begin{rSection}{Peer-Reviewed Publications}
 \vspace{-0.5cm}
-	\item Parameswaran, G., \textbf{Sekeres, G.}, and Goldblatt, H. (2025) ``The Politics of the Slippery Slope'' \emph{the Journal of Politics} 87(2). doi: \href{https://doi.org/10.1086/732965}{10.1086/732965}
+	\item Parameswaran, G., \textbf{Sekeres, G.}, and Goldblatt, H. (2025) ``The Politics of the Slippery Slope'' the \emph{Journal of Politics} 87(2). doi: \href{https://doi.org/10.1086/732965}{10.1086/732965}
     \item Dixit, A., \textbf{Sekeres, G.}, Mariano, E., Memtsoudis, S., and Sun, E. ``\href{https://pubmed.ncbi.nlm.nih.gov/37910860/}{Association of Patient Race and Hospital with Utilization of Regional Anesthesia for Treatment of Post-Operative Pain in Total Knee Arthroplasty: A Retrospective Analysis Using Medicare Claims}'' \emph{Anesthesiology}. 2024 Feb 1. doi: \href{https://doi.org/10.1097/aln.0000000000004827}{10.1097/ALN.0000000000004827}. PMID: 37910860.
 
     \item \textbf{Sekeres, G.}, Miller, T., Mariano, E., Glance, L., and Sun, E. ``Association Between Anesthesia Group Size and Merit-Based Incentive Payment System (MIPS) Scores.'' \emph{Anesthesiology}. 2024 Apr 1. doi: \href{https://doi.org/10.1097/ALN.0000000000004887}{10.1097/ALN.0000000000004887}. PMID: 38470114
