fixed typo in GT notes (thanks addie)

--- a/content/resources/private/spr_2025/econ_6110_notes.tex
+++ b/content/resources/private/spr_2025/econ_6110_notes.tex
@@ -1490,7 +1490,7 @@ A special case of public monitoring is when $Y=A$, and $\pi(y \mid a) = 1$. In t
 \end{example}
 
 \begin{remark}
-	Even if the private signals are independent, players may be able to correlate their beliefs by playing mixed strategies in the first period. Returning to the independent signals, consider the following strategies: In period 1, player $i$ plays $C$ with probability $\alpha \in (0,1)$. In period 2, player $i$ plays $G$ if and only if $a_i = C$ and $y_i = c$. In the second period, $i$ will want to play $G$ if and only if she assigns probability $\frac{1}{k+1}$ or greater to $j$ playing $G$. She assigns this probability by conditioning on what she knows: her action $a_i$ and her signal $y_i$. \[\prob\{a_2^j = G \mid a_i,y_i\} = \prob\{y_j = c \mid a_i\} \cdot \prob\{a_j = C \mid y_i\}\]Which holds because of independence and the assumption that $j$ is playing the same strategy. Bayes' Rule gives the probabilities \[ \begin{array}{c|c} a_i,y_i & \prob\{a_2^j = G \mid a_i,y_i\} \\\hline \\ C,c & (1-\varepsilon) \frac{(1-\varepsilon)\alpha}{(1-\varepsilon)\alpha + \varepsilon(1-\alpha)} \\\\ C,d & (1-\varepsilon) \frac{\varepsilon\alpha}{(1-\varepsilon)\alpha + \varepsilon(1-\alpha)} \\\\ D,c & \varepsilon \frac{(1-\varepsilon)\alpha}{(1-\varepsilon)\alpha + \varepsilon(1-\alpha)} \\\\ D,d & \varepsilon \frac{\varepsilon\alpha}{(1-\varepsilon)\alpha + \varepsilon(1-\alpha)} \end{array}\]Aside from the $(C,c)$ case, the probability that $j$ will play $G$ is of order $\varepsilon$, so for sufficiently small $\varepsilon$, $i$ will be willing to follow the prescribed strategy in the second period. Now consider $i$'s incentives in the first period. Her expected payoffs for each strategy are: \begin{align*} u_i(C) &= \alpha \barl a + (1-\varepsilon)^2 k + (1-\varepsilon)\varepsilon \cdot 0 + (1-\varepsilon)\varepsilon \cdot 0 + \varepsilon^2 \cdot 1\barr + (1-\alpha)\barl -1 + (1-\varepsilon) \cdot 1 + \varepsilon\cdot 0\barr \\ &= \alpha (1+\varepsilon^2) - (1-\alpha) + (1-\varepsilon)^2 \barl \alpha k + (1-\alpha)\barr \approx \alpha (1+k) \\ u_i(D) &= \alpha (2 + \varepsilon \cdot 0 + (1-\varepsilon) \cdot 1) + (1-\alpha) [0 + 1] \\ &= 2\alpha + 1 - \varepsilon\alpha \approx 2\alpha + 1\end{align*}We can make $i$ indifferent between $C$ and $D$ by setting $\alpha \to \frac{1}{k-1}$ as $\varepsilon \to 0$. Note that the key to a mixed equilibrium is that player $i$ conditions his second period behavior on the result of his first period randomization. Because of this, player $j$'s signal is now informative about $i$'s second period behavior. This means that $j$ will want to condition their second period action on the first period signal, which means i turn that there are incentives to cooperate in the first period. 
+	Even if the private signals are independent, players may be able to correlate their beliefs by playing mixed strategies in the first period. Returning to the independent signals, consider the following strategies: In period 1, player $i$ plays $C$ with probability $\alpha \in (0,1)$. In period 2, player $i$ plays $G$ if and only if $a_i = C$ and $y_i = c$. In the second period, $i$ will want to play $G$ if and only if she assigns probability $\frac{1}{k+1}$ or greater to $j$ playing $G$. She assigns this probability by conditioning on what she knows: her action $a_i$ and her signal $y_i$. \[\prob\{a_2^j = G \mid a_i,y_i\} = \prob\{y_j = c \mid a_i\} \cdot \prob\{a_j = C \mid y_i\}\]Which holds because of independence and the assumption that $j$ is playing the same strategy. Bayes' Rule gives the probabilities \[ \begin{array}{c|c} a_i,y_i & \prob\{a_2^j = G \mid a_i,y_i\} \\\hline \\ C,c & (1-\varepsilon) \frac{(1-\varepsilon)\alpha}{(1-\varepsilon)\alpha + \varepsilon(1-\alpha)} \\\\ C,d & (1-\varepsilon) \frac{\varepsilon\alpha}{\varepsilon\alpha + (1-\varepsilon)(1-\alpha)} \\\\ D,c & \varepsilon \frac{(1-\varepsilon)\alpha}{(1-\varepsilon)\alpha + \varepsilon(1-\alpha)} \\\\ D,d & \varepsilon \frac{\varepsilon\alpha}{\varepsilon\alpha + (1-\varepsilon)(1-\alpha)} \end{array}\]Aside from the $(C,c)$ case, the probability that $j$ will play $G$ is of order $\varepsilon$, so for sufficiently small $\varepsilon$, $i$ will be willing to follow the prescribed strategy in the second period. Now consider $i$'s incentives in the first period. Her expected payoffs for each strategy are: \begin{align*} u_i(C) &= \alpha \barl a + (1-\varepsilon)^2 k + (1-\varepsilon)\varepsilon \cdot 0 + (1-\varepsilon)\varepsilon \cdot 0 + \varepsilon^2 \cdot 1\barr + (1-\alpha)\barl -1 + (1-\varepsilon) \cdot 1 + \varepsilon\cdot 0\barr \\ &= \alpha (1+\varepsilon^2) - (1-\alpha) + (1-\varepsilon)^2 \barl \alpha k + (1-\alpha)\barr \approx \alpha (1+k) \\ u_i(D) &= \alpha (2 + \varepsilon \cdot 0 + (1-\varepsilon) \cdot 1) + (1-\alpha) [0 + 1] \\ &= 2\alpha + 1 - \varepsilon\alpha \approx 2\alpha + 1\end{align*}We can make $i$ indifferent between $C$ and $D$ by setting $\alpha \to \frac{1}{k-1}$ as $\varepsilon \to 0$. Note that the key to a mixed equilibrium is that player $i$ conditions his second period behavior on the result of his first period randomization. Because of this, player $j$'s signal is now informative about $i$'s second period behavior. This means that $j$ will want to condition their second period action on the first period signal, which means i turn that there are incentives to cooperate in the first period. 
 \end{remark}
 
 \begin{remark}
