fixed error (ty addie)

--- a/content/resources/private/spr_2025/econ_6110_notes.tex
+++ b/content/resources/private/spr_2025/econ_6110_notes.tex
@@ -1532,7 +1532,7 @@ Often a Bayesian game is not defined in terms of $\Omega$ and the \blue{signal f
 \subsection{Applications}
 
 \begin{example}
-	\red{Collective Action} Consider a problem where a group of $n$ players can obtain a public good if at least one of them volunteers. The public good generates a value $v < 1$ to each player, and volunteering costs $c_i$ to player $i$. We assume $c_i \sim F(\cdot)$, with support $[0,\bar{c}]$, and we will focus on symmetric equilibria. In the formalism of above, we have states $(c_1,\dots,c_n) \in \Omega$, with signals $\tau_i : \Omega \to T_i$, where $\tau_i(c_1,\dots,c_n) = c_i$, and beliefs $\prob\{c_{-i} \mid c_i\} = \prod_{j \ne i} f(c_j)$. We also have linear utility, so $0$ if no contribution, $v$ if someone else contributes, and $v-c_i$ if you contribute. Assume that the probability of contribution for a player is $\sigma$. The expected utility of contributing is $u_i(C) = v - c_i$, and the expected utility of not contributing is $u_i(NC) = \prob\{a_j = C \text{ for at least } 1 j \ne i\} v$ Thus, the net utility of contributing is \[\Delta u_i = [1-\prob\{\# \text{volunteers } \ne i \ge 1\}] v - c_i = \prob\{\# \text{volunteers } \ne i = 0\}\cdot v - c_i\]if $\Delta u_i \ge 0$, then $\Delta u_j > 0$ if $c_j < c_i$. So there exists $c\opt$ such that a player $c_i$ volunteers if and only if $c_i \le c\opt$. What is $c\opt$? $c\opt = \prob\{\# \text{volunteers } = 0\}\cdot v = [1-F(c\opt)]^{n-1}v$. Note that this means that we have a unique equilibrium as long as the typical assumptions on $F(\cdot)$ hold. We can think about asymptotics here. Assume that $c_n\opt \to c\opt_\infty > 0$, then we have a contradiction. Thus, $c_n\opt \to 0$. However, the probability of success is \[P = 1-[1-F(c_n\opt)]^n = 1-\parl \frac{c_n\opt}{v}\parr^{\frac{n-1}{n}} \to 1\]
+	\red{Collective Action} Consider a problem where a group of $n$ players can obtain a public good if at least one of them volunteers. The public good generates a value $v < 1$ to each player, and volunteering costs $c_i$ to player $i$. We assume $c_i \sim F(\cdot)$, with support $[0,\bar{c}]$, and we will focus on symmetric equilibria. In the formalism of above, we have states $(c_1,\dots,c_n) \in \Omega$, with signals $\tau_i : \Omega \to T_i$, where $\tau_i(c_1,\dots,c_n) = c_i$, and beliefs $\prob\{c_{-i} \mid c_i\} = \prod_{j \ne i} f(c_j)$. We also have linear utility, so $0$ if no contribution, $v$ if someone else contributes, and $v-c_i$ if you contribute. Assume that the probability of contribution for a player is $\sigma$. The expected utility of contributing is $u_i(C) = v - c_i$, and the expected utility of not contributing is $u_i(NC) = \prob\{a_j = C \text{ for at least } 1 j \ne i\} v$ Thus, the net utility of contributing is \[\Delta u_i = [1-\prob\{\# \text{volunteers } \ne i \ge 1\}] v - c_i = \prob\{\# \text{volunteers } \ne i = 0\}\cdot v - c_i\]if $\Delta u_i \ge 0$, then $\Delta u_j > 0$ if $c_j < c_i$. So there exists $c\opt$ such that a player $c_i$ volunteers if and only if $c_i \le c\opt$. What is $c\opt$? $c\opt = \prob\{\# \text{volunteers } = 0\}\cdot v = [1-F(c\opt)]^{n-1}v$. Note that this means that we have a unique equilibrium as long as the typical assumptions on $F(\cdot)$ hold. We can think about asymptotics here. Assume that $c_n\opt \to c\opt_\infty > 0$, then we have a contradiction. Thus, $c_n\opt \to 0$. However, the probability of success is \[P = 1-[1-F(c_n\opt)]^n = 1-\parl \frac{c_n\opt}{v}\parr^{\frac{n}{n-1}} \to 1\]
 \end{example}
 
 \begin{example}
