--- a/content/resources/private/spr_2025/materials_spr_2025/ECON_6110/02_game_theory_notes.tex
+++ b/content/resources/private/spr_2025/materials_spr_2025/ECON_6110/02_game_theory_notes.tex
@@ -1536,7 +1536,7 @@ Often a Bayesian game is not defined in terms of $\Omega$ and the \blue{signal f
 \end{example}
 
 \begin{example}
-	\red{Juries} Consider a trial in which $n$ jurors decided to acquit or convict a defendant. The defendant is guilty ($G$) with prior probability $\pi$ and innocent ($I$) otherwise. Each juror receives an informative signal $\{g,i\}$ with probability $\prob\{g \mid G\} =p > \frac{1}{2}$, and $\prob\{i \mid I\} = q > \frac{1}{2}$. The defendant is convicted if all jurors vote to convict. We assume that the voter's utility for a decision $x = (x_1,\dots,x_n)$ is\[u_i(x_i,x_{-i}) = \begin{cases} 0 & \text{if } x = c \& G \text{ or } x = a \& I \\ -z & \text{if } x = c \& I \\ -(1-z) & \text{if } x = a \& I\end{cases}\]Note that we can interpret $z$ as the belief threshold on the guilt of the defendant, such that below it acquitting is optimal. Indeed, if $r$ is the probability that a defendant is guilty (and $i$ is pivotal), then \begin{align*} u_i(a) &= -r(1-z) + (1-r) \cdot 0 \\ u_i(c) &= r \cdot 0 - (1-r)\cdot z\end{align*}So $a \succeq_i c \iff r \ge z$. Jurors face two types of costly mistakes: convicting an innocent and acquitting a guilty defendant. They need to assess the trade-off on the basis of all the information they have, so why is this a strategic situation? The outcome depends on the collective decision. The decision of a juror only matters if they're pivotal. The most simple case is when $n = 1$, since there are no strategic interactions. The posterior after an $i$ signal is \[\prob\{G \mid i\} = \frac{\prob\{i\mid G\} \cdot \prob\{G\}}{\prob\{i \mid G\}\cdot \prob\{G\} + \prob\{i \mid I \}\cdot (1-\prob\{G\})} = \frac{(1-p)\pi}{(1-p)\pi + q(1-\pi)}\]So a juror is willing to acquit after an innocent signal if and only if $z \ge \frac{(1-p)\pi}{(1-p)\pi + q(1-\pi)}$. Similarly, they are willing to convict after a guilty signal as long as $z \le \frac{p\pi}{p\pi +(1-q)(1-\pi)}$. Putting these together, a juror is willing to go with the signal if \[\frac{(1-p)\pi}{(1-p)\pi + q(1-\pi)} \le z \le \frac{p\pi}{p\pi +(1-q)(1-\pi)}\]It is not always the case that the signal determines the decision, because the signal may be weak compared with either the prior $\pi$ or the preferences $z$. Intuitively, some jurors will always convict and some will always acquit, if the inequalities above do not hold.
+	\red{Juries} Consider a trial in which $n$ jurors decided to acquit or convict a defendant. The defendant is guilty ($G$) with prior probability $\pi$ and innocent ($I$) otherwise. Each juror receives an informative signal $\{g,i\}$ with probability $\prob\{g \mid G\} =p > \frac{1}{2}$, and $\prob\{i \mid I\} = q > \frac{1}{2}$. The defendant is convicted if all jurors vote to convict. We assume that the voter's utility for a decision $x = (x_1,\dots,x_n)$ is\[u_i(x_i,x_{-i}) = \begin{cases} 0 & \text{if } x = c \& G \text{ or } x = a \& I \\ -z & \text{if } x = c \& I \\ -(1-z) & \text{if } x = a \& I\end{cases}\]Note that we can interpret $z$ as the belief threshold on the guilt of the defendant, such that below it acquitting is optimal. Indeed, if $r$ is the probability that a defendant is guilty (and $i$ is pivotal), then \begin{align*} u_i(a) &= -r(1-z) + (1-r) \cdot 0 \\ u_i(c) &= r \cdot 0 - (1-r)\cdot z\end{align*}So $a \succeq_i c \iff z \ge r$. Jurors face two types of costly mistakes: convicting an innocent and acquitting a guilty defendant. They need to assess the trade-off on the basis of all the information they have, so why is this a strategic situation? The outcome depends on the collective decision. The decision of a juror only matters if they're pivotal. The most simple case is when $n = 1$, since there are no strategic interactions. The posterior after an $i$ signal is \[\prob\{G \mid i\} = \frac{\prob\{i\mid G\} \cdot \prob\{G\}}{\prob\{i \mid G\}\cdot \prob\{G\} + \prob\{i \mid I \}\cdot (1-\prob\{G\})} = \frac{(1-p)\pi}{(1-p)\pi + q(1-\pi)}\]So a juror is willing to acquit after an innocent signal if and only if $z \ge \frac{(1-p)\pi}{(1-p)\pi + q(1-\pi)}$. Similarly, they are willing to convict after a guilty signal as long as $z \le \frac{p\pi}{p\pi +(1-q)(1-\pi)}$. Putting these together, a juror is willing to go with the signal if \[\frac{(1-p)\pi}{(1-p)\pi + q(1-\pi)} \le z \le \frac{p\pi}{p\pi +(1-q)(1-\pi)}\]It is not always the case that the signal determines the decision, because the signal may be weak compared with either the prior $\pi$ or the preferences $z$. Intuitively, some jurors will always convict and some will always acquit, if the inequalities above do not hold.
 	
 	With two jurors, the vote of a juror only matters if the other votes to convict. Can we have an equilibrium where both jurors vote according to their signal? In this case, the relevant posterior for $i$ is \[\prob\{G \mid i,g\} = \frac{(1-p)p\pi}{(1-p)p\pi + q(1-q)(1-\pi)}\]and following the logic above, an equilibrium exists only if \[\frac{(1-p)p\pi}{(1-p)p\pi + q(1-q)(1-\pi)} \le z \le \frac{p^2 \pi}{p^2\pi + (1-q)^2(1-\pi)}\] note that \[\frac{(1-p)p\pi }{(1-p)p\pi + q(1-q)(1-\pi)} > \frac{(1-p)\pi}{(1-p)\pi + q(1-\pi)}\]so the juror is more reluctant to vote to acquit. Intuitively, this comes from the fact that the juror assumes that the other juror is voting guilty when making their decision, so their posterior is shifted towards guilt.
 	
